<resources>
    <string name="app_name">MyShop</string>
    <string name="splash_screen">SplashScreen</string>
    <string name="login">Login</string>
    <string name="app_name_upper">MySHOP</string>
    <string name="sign_in_to_cont">Please sign in to continue.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_not_found_error">Email or password doesn\'t match</string>
    <string name="dont_have_account">Don\'t have an account? </string>
    <string name="sign_up"><b>Sign Up</b></string>
    <string name="name">Name</string>
    <string name="shop_name">Shop name</string>
    <string name="retype_password">Retype password</string>
    <string name="filed_cant_be_empty">can\'t be empty</string>
    <string name="retyped_password_doesnt_match">Retyped password doesn\'t match</string>
    <string name="home">Home</string>
    <string name="add_sale">Add Sale</string>
    <string name="products">Products</string>
    <string name="history">History</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="sign_out">Sign Out</string>
    <string name="total">Total</string>
    <string name="today">Today</string>
    <string name="done">Done</string>
    <string name="discount">Discount</string>
    <string name="total_amount">Total Amount</string>
    <string name="payable_amount">Payable Amount</string>
    <string name="zero_taka">0 ৳</string>
    <string name="item_name">Item name</string>
    <string name="taka_logo">৳</string>
    <string name="add_item">Add Item</string>
    <string name="add_quantity">Add Quantity</string>
    <string name="select_item">Select Item</string>
    <string name="quantity">Quantity</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="item_not_found">Item not found.</string>
    <string name="not_enough_quantity">Not enough quantity.</string>
    <string name="quantity_cant_be_empty">Quantity cannot be empty.</string>
    <string name="discount_error">Discount cannot be greater than total amount</string>
    <string name="discount_cant_be_empty">Discount cannot be empty.</string>
    <string name="connectToNetwork">Please connect to Internet</string>
    <string name="haveAccount">You have an account</string>
    <string name="product_name">Product Name</string>
    <string name="company_name">Company Name</string>
    <string name="sold_price">Sold Price</string>
    <string name="click_to_add">Click to add</string>
    <string name="stock">Stock</string>
    <string name="unit">Unit</string>
    <string name="stock_quantity">Stock Quantity</string>
    <string name="save">Save</string>
    <string name="time">Time</string>
    <string name="paid_amount">Paid Amount</string>
    <string name="date">Date</string>
    <string name="total_price">Total Price</string>
    <string name="reduce_quantity">Reduce Quantity</string>
    <string name="delete">Delete</string>
</resources>