<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_total_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/total_amount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="22sp"
            android:textColor="@color/accent_color_light"
            android:layout_marginStart="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/discount_total_amount"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:text="500"
            android:textColor="@color/red"
            android:textSize="22sp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/get_discount_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraint_layout_total_amount"
        android:layout_margin="20dp"
        android:hint="@string/discount"
        android:backgroundTint="@color/accent_color"/>

    <TextView
        android:id="@+id/discount_error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/get_discount_amount"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/red"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/discount_confirm_button"
        app:layout_constraintTop_toBottomOf="@id/discount_error_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:text="@string/confirm"
        android:textColor="@color/accent_color"
        android:background="@drawable/dialog_button_background"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/discount_cancel_button"
        app:layout_constraintTop_toBottomOf="@id/discount_error_text"
        app:layout_constraintEnd_toStartOf="@+id/discount_confirm_button"
        android:layout_marginEnd="10dp"
        android:text="@string/cancel"
        android:textColor="@color/accent_color"
        android:background="@drawable/dialog_button_background"
        />


</androidx.constraintlayout.widget.ConstraintLayout>