<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:layout_margin="5dp"
    android:elevation="8dp"
    app:cardElevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white">

        <LinearLayout
            android:id="@+id/details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            android:layout_margin="15dp">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/product_name"
                android:textColor="@color/accent_color_light"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/quantity"
                android:textColor="@color/accent_color_light"
                android:textSize="15sp"
                />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sold_price"
                android:textColor="@color/accent_color_light"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/company_name"
                android:textColor="@color/accent_color_light"
                android:textSize="15sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/details"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp">

            <TextView
                android:id="@+id/itemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="textw"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/accent_color"
                android:layout_gravity="start"/>


            <TextView
                android:id="@+id/itemQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="textView"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/accent_color"
                android:layout_gravity="start" />

            <TextView
                android:id="@+id/itemPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="textView"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/accent_color"
                android:layout_gravity="start" />

            <TextView
                android:id="@+id/itemCompany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="textView"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/accent_color"
                android:layout_gravity="start" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/itemAddButton"
            android:layout_width="60dp"
            android:layout_height="45dp"
            android:tooltipText="@string/click_to_add"
            app:srcCompat="@drawable/add_cart_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="30dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>